--- a/styles.css
+++ b/styles.css
@@ -17,17 +17,20 @@ header {
     border-bottom: 1px solid seashell;
     background-color: black;
     align-items: center;
+    
 }
 
 header img {
-    margin-left: 10px;
     height: 50px;
+    padding-left: 10px;
 }
 
 nav {
     width: 100%;
     display: flex;
     justify-content: right;
+    padding-right: 10px;
+    
 }
 
 header nav ul li {
