--- a/styles.css
+++ b/styles.css
@@ -111,3 +111,11 @@ main {
     margin-bottom: -100px;
     z-index: 1;
 }
+.contact {
+    height: 200px;
+}
+
+footer h4 {
+    text-align: left;
+    padding-left: 10px;
+}
